add payment and email support

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,14 +19,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Flasky</a>
+            <a class="navbar-brand" href="/">主页</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">主页</a></li>
+                <li><a href="https://steemit.com" target="_blank">Steemit</a></li>
+                <li><a href="https://cnsteem.com" target="_blank">CNsteem</a></li>
+                <li><a href="https://busy.org" target="_blank">Busy</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href=""> Profile </a></li>
+                <li><a href="">注册状态查询</a></li>
             </ul>
         </div>
     </div>
