--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% block title %}CNsteem - 404 {% endblock %}
+{% block title %}CNsteem - 500 {% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>未找到该网页</h1>
+    <h1>内部错误</h1>
 </div>
 {% endblock %}
