--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <p>CNsteem快捷注册!</p>
+    <p><h3>Steem快捷注册</h3></p>
 
 </div>
 {{ wtf.quick_form(form) }}
