--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% block title %}CNsteem - 404 {% endblock %}
+{% block title %}CNsteem - 信息 {% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>未找到该网页</h1>
+    <h3>{{ message }}</h3>
 </div>
 {% endblock %}
