add support for steem register

--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}CNsteem - 500 {% endblock %}
+{% block title %}CNsteem - 500 Error {% endblock %}
 
 {% block page_content %}
 <div class="page-header">
