--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}CNsteem - 404 {% endblock %}
+{% block title %}CNsteem - 404 Error{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
