--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %}主页{% endblock %}
+{% block title %}Steem注册{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
@@ -8,4 +8,5 @@
 
 </div>
 {{ wtf.quick_form(form) }}
+
 {% endblock %}
