--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,6 @@
     <p><h3>Steem快捷注册</h3></p>
 
 </div>
-{{ wtf.quick_form(form) }}
+{{ wtf.quick_form(form, button_map={'submit': 'primary'}) }}
 
 {% endblock %}
