--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,11 @@
 <link rel="shortcut icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/x-icon">
 {% endblock %}
+
+{% block styles -%}
+{{super()}}
+<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='cnsteem.css')}}">
+{% endblock %}
 {% block title %}CNsteem{% endblock %}
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
@@ -28,7 +33,7 @@
                 <li><a href="https://busy.org" target="_blank">Busy</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="">注册状态查询</a></li>
+                <li><a href="">TBD</a></li>
             </ul>
         </div>
     </div>
@@ -45,5 +50,17 @@
     {% endfor %}
 
     {% block page_content %}{% endblock %}
+
 </div>
+{% block footer %}
+<div class="footer">
+    <div class="container text-center">
+        <span class="text-muted">&copy; 2017 Created By Skenan  -->
+            <a href="https://github.com/skenan/cnsteem" target="_blank">Github</a>  |
+            <a href="https://steemit.com/@skenan" target="_blank">Steemit</a>
+        </span>
+    </div>
+</div>
+{% endblock%}
 {% endblock %}
+
