--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,9 +55,7 @@
 {% block footer %}
 <div class="footer">
     <div class="container text-center">
-        <span class="text-muted">&copy; 2017 Created By Skenan  -->
-            <a href="https://github.com/skenan/cnsteem" target="_blank">Github</a>  |
-            <a href="https://steemit.com/@skenan" target="_blank">Steemit</a>
+        <span class="text-muted">&copy; 2017 Created By <a href="https://steemit.com/@skenan" target="_blank">Skenan</a> & <a href="https://steemit.com/@ericjj" target="_blank">Ericjj</a>  --> <a href="https://github.com/skenan/cnsteem" target="_blank">Github</a>
         </span>
     </div>
 </div>
