--- a/app/static/cnsteem.css
+++ b/app/static/cnsteem.css
@@ -1,9 +1,15 @@
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+}
+
+.page-header {
+    padding-bottom: 9px;
+    margin:0 0 10px;
+    border-bottom: 1px solid #eee;
 }
