--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,9 +31,10 @@
                 <li><a href="https://steemit.com" target="_blank">Steemit</a></li>
                 <li><a href="https://cnsteem.com" target="_blank">CNsteem</a></li>
                 <li><a href="https://busy.org" target="_blank">Busy</a></li>
+                <li><a href="https://utopian.io/" target="_blank">Utopian</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="">TBD</a></li>
+                <li><a href="http://steemit.wang" target="_blank">Steem中文指南</a></li>
             </ul>
         </div>
     </div>
