--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <p><h3>Steem快捷注册 —— <a href="https://steemit.com/cn/@skenan/cnsteem-io-steem" target="_blank">流程介绍</a></h3></p>
+    <p><h3><a href="https://steemit.com/cn/@skenan/cnsteem-io-steem" target="_blank">流程介绍</a> + <a href="https://steemit.com/cn/@skenan/cnsteem-io" target="_blank">问题解决</a></h3></p>
 
 </div>
 {{ wtf.quick_form(form, button_map={'submit': 'primary'}) }}
