add delegation support

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,6 +32,7 @@
                 <li><a href="https://cnsteem.com" target="_blank">CNsteem</a></li>
                 <li><a href="https://busy.org" target="_blank">Busy</a></li>
                 <li><a href="https://utopian.io/" target="_blank">Utopian</a></li>
+                <li><a href="/delegate">申请SP</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="http://steemit.wang" target="_blank">Steem中文指南</a></li>
