--- a/app/templates/register_success.html
+++ b/app/templates/register_success.html
@@ -11,6 +11,8 @@
     </br>
     <h4>关注CNsteem.com && CNsteem.io创建者<a href="https://steemit.com/@skenan" target="_blank"> skenan </a>及时获取更多信息</h4>
     </br>
+    <h4>如果在 Steem 发帖遇到 Voting weight is too small 错误, 可以前往<a href="/delegate">申请SP</a>满足日常操作</h4>
+    </br>
     <h4>如果遇到各种技术问题，可以发邮件到cnsteem@gmail.com 或者去<a href="https://steemit.com/@skenan" target="_blank"> skenan </a>文章下留言
     </h4>
 </div>
