--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 {% block page_content %}
 <div class="page-header text-muted">
 
-    <h4>注册流程：选择用户名--输入邮箱--付款成功--检查邮件--完成注册</h4>
+    <h4>流程：选择用户名--输入邮箱--付款成功--检查邮件--完成注册 PS:<a href="https://steemit.com/cn/@skenan/cnsteem-io" target="_blank"> 收费原因</a></h4>
 
 </div>
 {{ wtf.quick_form(form, button_map={'submit': 'primary'}) }}
