update the busy link

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="https://steemit.com" target="_blank">Steemit</a></li>
                 <li><a href="https://cnsteem.com" target="_blank">CNsteem</a></li>
-                <li><a href="https://busy.org" target="_blank">Busy</a></li>
+                <li><a href="https://busy.org/i/@skenan" target="_blank">Busy</a></li>
                 <li><a href="https://utopian.io/" target="_blank">Utopian</a></li>
                 <li><a href="/delegate">申请SP</a></li>
             </ul>
