--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %}Steem注册{% endblock %}
+{% block title %}Steemit注册{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
