--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,9 @@
 {% extends "bootstrap/base.html" %}
+{% import "bootstrap/google.html" as google %}
 
 {% block scripts %}
 {{ super() }}
+{{google.uanalytics(config.GOOGLE_ANALYTICS_ID)}}
 {% endblock %}
 
 {% block head %}
