--- a/app/templates/register_failure.html
+++ b/app/templates/register_failure.html
@@ -9,6 +9,6 @@
 <div class="text-muted">
     <h4>请先自行阅读 CNSteem.io <a href="https://steemit.com/cn/@skenan/cnsteem-io" target="_blank">注册问题解决</a></h4>
     </br>
-    <h4>如果不能解决，可以发邮件到cnsteem@gmail.com</h4>
+    <h4>如果不能解决，可以发邮件到cnsteem@gmail.com，由于时差原因，如不能及时回复，请见谅</h4>
 </div>
 {% endblock %}
