--- a/app/templates/register_success.html
+++ b/app/templates/register_success.html
@@ -3,7 +3,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h2>欢迎来到Steem</h2>
+    <h2>注册成功，欢迎来到Steem</h2>
 
 </div>
 <div class="text-muted">
