--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -19,6 +19,8 @@
     }
   </script>
   <link rel="stylesheet" href="/static/selfsteem.css?v=2">
+  <link rel="shortcut icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/x-icon">
+  <link rel="icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/x-icon">
   <script src="/static/selfsteem.js?v=2"></script>
 </head>
 <body>
