change the font

--- a/app/static/selfsteem.css
+++ b/app/static/selfsteem.css
@@ -43,7 +43,7 @@ html {
 }
 body {
   font-weight: 300;
-  font-family: 'Rounded Mplus 1c', sans-serif;
+  font-family: 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', SimSun, sans-serif;
   font-size: 1em;
   line-height: 1.52941176em;
 }
