change to paysapi

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,7 +62,7 @@
 {% block footer %}
 <div class="footer">
     <div class="text-center">
-        <p class="text-muted">&copy; 2017 Created By <a href="https://steemit.com/@skenan" target="_blank">Skenan</a> & <a href="https://steemit.com/@ericjj" target="_blank">Ericjj</a>  --> <a href="https://github.com/skenan/cnsteem" target="_blank">Github</a>
+        <p class="text-muted">&copy; 2017 Created By <a href="https://steemit.com/@skenan" target="_blank">Skenan</a>  --> <a href="https://github.com/skenan/cnsteem" target="_blank">Github</a>
         </p>
     </div>
 </div>
