--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h4>最近Steem网络不太稳定，遇到问题请稍后重试或发邮件到 cnsteem@gmail.com </h4>
+    <h4>注册遇到问题请稍后重试，或发邮件到 cnsteem@gmail.com </h4>
     <span>PS：<a href="https://steemit.com/cn/@skenan/cnsteem-io" target="_blank">付费注册原因</a>，免费注册请前往<a href="https://steemit.com/pick_account" target="_blank">Steemit官网</a>，但需要翻墙+5-7天审核时间。</span>
 
 </div>
