--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 {% block page_content %}
 <div class="page-header">
     <h4>注册遇到问题请稍后重试，或发邮件到 cnsteem@gmail.com </h4>
-    <span>PS：<a href="https://steemit.com/cn/@skenan/cnsteem-io" target="_blank">付费注册原因</a>，免费注册请前往<a href="https://steemit.com/pick_account" target="_blank">Steemit官网</a>，但需要翻墙+5-7天审核时间。</span>
+    <span>PS：<a href="https://steemit.com/cn/@skenan/cnsteem-io" target="_blank">付费注册原因</a>，免费注册请前往<a href="https://signup.steemit.com/" target="_blank">Steemit官网</a>，但需要较长审核时间。</span>
 
 </div>
 {{ wtf.quick_form(form, button_map={'submit': 'primary'}) }}
