change the desc

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,8 +4,8 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h4>注册遇到问题请稍后重试，或发邮件到 cnsteem@gmail.com </h4>
-    <span>PS：<a href="https://steemit.com/cn/@skenan/cnsteem-io" target="_blank">付费注册原因</a>，免费注册请前往<a href="https://signup.steemit.com/" target="_blank">Steemit官网</a>，但需要较长审核时间。</span>
+    <h4>此为极速付费注册服务，如有问题请稍候重试，或发邮件到 cnsteem@gmail.com </h4>
+    <span>PS：免费注册请到 <a href="https://signup.steemit.com/" target="_blank">Steemit</a> 官网，但需要邮箱，手机号及长审核时间。</span>
 
 </div>
 {{ wtf.quick_form(form, button_map={'submit': 'primary'}) }}
