--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,8 +6,7 @@
 <div class="page-header">
     <h4>此为极速付费注册服务，如有问题请稍候重试，或发邮件到 cnsteem@gmail.com </h4>
     <span>PS：免费注册请到 <a href="https://signup.steemit.com/" target="_blank">Steemit</a> 官网，但需要邮箱，手机号及长审核时间。</span>
-
 </div>
-{{ wtf.quick_form(form, button_map={'submit': 'primary'}) }}
+{{ wtf.quick_form(form, button_map={'submit': 'primary', 'submit_wepay':'primary'}) }}
 
 {% endblock %}
