--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,8 +4,8 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h4>此为<a href="https://cnsteem.com/cn/@skenan/cnsteem-io">付费注册</a>服务，无需审核时间，遇到问题发邮件到 cnsteem@gmail.com </h4>
-    <span>PS：免费注册请到 <a href="https://signup.steemit.com/" target="_blank">Steemit</a> 官网，但可能需要科学上网和 5-7 天审核时间。</span>
+    <span>此为付费注册服务，遇到问题发邮件到 cnsteem@gmail.com </span><br>
+    <span>免费注册请到<a href="https://signup.steemit.com/" target="_blank">Steemit</a>官网，需手机号+邮箱+长审核时间</span>
 </div>
 {{ wtf.quick_form(form, button_map={'submit': 'primary', 'submit_wepay':'primary'}) }}
 
