update the desc

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,7 +40,7 @@
                 <li><a href="/delegate">申请SP</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="http://steemit.wang" target="_blank">Steem中文指南</a></li>
+                <li><a href="http://steemg.org" target="_blank">Steem中文指南</a></li>
             </ul>
         </div>
     </div>
