--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,9 +38,10 @@
                 <li><a href="https://busy.org/i/@skenan" target="_blank">Busy</a></li>
                 <li><a href="https://utopian.io/" target="_blank">Utopian</a></li>
                 <li><a href="/delegate">申请SP</a></li>
+                <li><a href="/faq">常见问题</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="http://steemg.org" target="_blank">Steem中文指南</a></li>
+                <li><a href="http://steemh.org" target="_blank">Steem中文指南</a></li>
             </ul>
         </div>
     </div>
