--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,8 +4,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <span>已帮助<a href="/info">1400+</a>用户完成注册，遇到问题发邮件到 cnsteem@gmail.com </span><br>
-    <span>免费注册请到<a href="https://signup.steemit.com/" target="_blank">Steemit</a>官网，需手机号+邮箱+长审核时间</span>
+    <span>已帮助<a href="/info">1400+</a>用户完成注册，常见问题请点<a href="/faq">这里</a></span><br>
 </div>
 {{ wtf.quick_form(form, button_map={'submit': 'primary', 'submit_wepay':'primary'}) }}
 
