--- a/app/templates/register_success.html
+++ b/app/templates/register_success.html
@@ -7,7 +7,7 @@
 
 </div>
 <div class="text-muted">
-    <h4>前往阅读<a href="http://steemg.org/" target="_blank"> Steem中文指南</a></h4>
+    <h4>前往阅读<a href="http://steemh.org/" target="_blank"> Steem中文指南</a></h4>
     </br>
     <h4>登录 <a href="https://steemit.com" target="_blank">Steemit</a> 官网修改密码</h4>
     </br>
