change to cnsteem.org

--- a/app/templates/register_success.html
+++ b/app/templates/register_success.html
@@ -11,7 +11,7 @@
     </br>
     <h4>登录 <a href="https://steemit.com" target="_blank">Steemit</a> 官网修改密码</h4>
     </br>
-    <h4>关注CNsteem.com && CNsteem.io创建者<a href="https://steemit.com/@skenan" target="_blank"> skenan </a>及时获取更多信息</h4>
+    <h4>关注CNsteem.org && CNsteem.io创建者<a href="https://steemit.com/@skenan" target="_blank"> skenan </a>及时获取更多信息</h4>
     </br>
     <h4>如果在 Steem 发帖遇到 Voting weight is too small 错误, 可以前往<a href="/delegate">申请SP</a>满足日常操作</h4>
     </br>
