--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="https://steemit.com" target="_blank">Steemit</a></li>
-                <li><a href="https://cnsteem.com" target="_blank">CNsteem</a></li>
+                <li><a href="https://cnsteem.org" target="_blank">CNsteem</a></li>
                 <li><a href="https://busy.org/i/@skenan" target="_blank">Busy</a></li>
                 <li><a href="https://utopian.io/" target="_blank">Utopian</a></li>
                 <li><a href="/delegate">申请SP</a></li>
