--- a/app/templates/faq.html
+++ b/app/templates/faq.html
@@ -27,7 +27,7 @@
     <blockquote><p>防止其他人暴力破解你的账号，盗取里边的资金</p>
     </blockquote>
     <h4>7. 怎么才能修改帐号的密码？</h4>
-    <blockquote><p>前往 <a href='https://steemit.com/' target='_blank'>https://steemit.com/</a>@你的用户名/password 进行修改</p>
+    <blockquote><p>前往 <a href='https://steemitwallet.com/' target='_blank'>https://steemitwallet.com/</a>@你的用户名/password 进行修改</p>
     </blockquote>
     <h4>8. 密码忘记了，怎么找回？</h4>
     <blockquote><p>忘记主密码，没人能帮你找回</p>
