--- a/app/templates/register_success.html
+++ b/app/templates/register_success.html
@@ -7,15 +7,17 @@
 
 </div>
 <div class="text-muted">
-    <h4>前往阅读<a href="http://steemh.org/" target="_blank"> Steem中文指南</a></h4>
+    <h4>首页建议新人前往阅读<a href="http://steemh.org/" target="_blank"> Steem中文指南</a></h4>
     </br>
-    <h4>登录 <a href="https://steemit.com" target="_blank">Steemit</a> 官网修改密码</h4>
+
+    <h4>登录Steem方式</h4>
+    <br>
+    <h4>1. 使用从CNsteem获取的用户名密码登录<a href="https://steemitwallet.com" target="_blank"> Steemit Wallet </a>
+        获取 Posting Key, 通过Posting Key登录<a href="https://steemit.com" target="_blank"> Steemit</a></h4>
     </br>
-    <h4>关注CNsteem.io创建者<a href="https://steemit.com/@skenan" target="_blank"> skenan </a>及时获取更多信息</h4>
+    <h4>2. 使用从CNsteem获取的用户名密码登录<a href="https://steempeak.com/" target="_blank"> SteemPeak</a></h4>
     </br>
-    <h4>欢迎下载并使用最好的的Steem移动客户端<a href="https://partiko.app">Partiko</a></h4>
-    </br>
-    <h4>如果在 Steem 发帖遇到 Voting weight is too small 错误, 可以前往<a href="/delegate">申请SP</a>满足日常操作</h4>
+    <h4>欢迎下载并使用Steem最好的移动客户端<a href="https://partiko.app"> Partiko</a></h4>
     </br>
 </div>
 {% endblock %}
