--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,9 +8,9 @@
 {{ super() }}
 <link rel="shortcut icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/x-icon">
-<meta name="description" content="Steemit账号快速注册"/>
+<meta name="description" content="Steemit 账号快速注册, Steem 最快的注册方式，支持支付宝，微信"/>
 <meta name="title" content="Steemit 注册"/>
-<meta name="keywords" content="Steemit Steem 注册"/>
+<meta name="keywords" content="Steemit Steem 快速注册"/>
 {% endblock %}
 
 {% block styles -%}
@@ -33,7 +33,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="https://steemit.com" target="_blank">Steemit</a></li>
                 <li><a href="https://partiko.app" target="_blank">Partiko</a></li>
-                <li><a href="https://steempeak.com" target="_blank">SteemPeak</a></li>
+                <li><a href="https://makeet.io" target="_blank">Makeet</a></li>
                 <li><a href="/faq">常见问题</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
