--- a/app/templates/register_failure.html
+++ b/app/templates/register_failure.html
@@ -8,7 +8,9 @@
 </div>
 <div class="text-muted">
     <h4>最近Steem网络不太问题，如遇到内部错误，可以稍后再试。</h4>
-    </br>
-    <h4>如果还不能解决，可以发邮件到cnsteem@gmail.com，由于时差原因，如不能及时回复，请见谅</h4>
+    <br>
+    <h4>如果还不能解决，请前往<a href="https://makeet.io" target="_blank"> Makeet </a>交流提问, 或发邮件到cnsteem@gmail.com</h4>
+    <br>
+    <h4>由于时差原因，如不能及时回复，请见谅</h4>
 </div>
 {% endblock %}
