--- a/app/templates/faq.html
+++ b/app/templates/faq.html
@@ -3,9 +3,9 @@
 
 {% block page_content %}
     <div class="page-header">
-        <h4>常见问题如下，如遇其他问题，发邮件到 <a href='mailto:cnsteem@gmail.com' target='_blank'>cnsteem@gmail.com</a></h4>
+        <h4>常见问题如下，其他问题请前往<a href="https://makeet.io" target="_blank"> Makeet </a>提问交流 </h4>
+        <h4>或发邮件到 <a href='mailto:cnsteem@gmail.com' target='_blank'>cnsteem@gmail.com</a></h4><br>
     </div>
-
 
     <h4>1. 为什么在CNsteem注册要交钱？</h4>
     <blockquote><p>在Steem区块链上注册用户，需要向网络支付一定的steem加密货币<br/>
