--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,8 @@
 
 {% block page_content %}
 <div class="page-header">
-    <span>已帮助3000+用户完成注册，常见问题请点<a href="/faq">这里</a></span><br>
+    <h4>已帮助3000+用户完成注册，常见问题请点<a href="/faq">这里</a></h4>
+    <h4>其他问题，请前往 <a href="https://makeet.io"> Makeet </a>提问交流</h4>
 </div>
 {{ wtf.quick_form(form, button_map={'submit': 'primary', 'submit_wepay':'primary'}) }}
 
