--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="https://steemit.com" target="_blank">Steemit</a></li>
                 <li><a href="https://partiko.app" target="_blank">Partiko</a></li>
-                <li><a href="https://makeet.io" target="_blank">Makeet</a></li>
+                <li><a href="https://busy.org" target="_blank">Busy</a></li>
                 <li><a href="/faq">常见问题</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
