--- a/app/templates/register_success.html
+++ b/app/templates/register_success.html
@@ -8,7 +8,7 @@
 </div>
 <div class="text-muted">
     <h4>首页建议新人前往阅读<a href="http://steemh.org/" target="_blank"> Steem中文指南</a></h4>
-    <h4>如有问题，请前往 <a href="https://makeet.io"> Makeet </a>提问交流</h4>
+    <h4>如有问题，发邮件到 <a href='mailto:cnsteem@gmail.com' target='_blank'>cnsteem@gmail.com</a></h4>
     </br>
 
     <h4>登录Steem方式</h4>
