--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h4>已帮助4000+用户完成注册，常见问题请点<a href="/faq">这里</a></h4>
+    <h4>已帮助4000+用户完成注册，常见问题请点<a href="/faq">这里</a>, 批量注册请 Email 联系</h4>
 </div>
 {{ wtf.quick_form(form, button_map={'submit': 'primary', 'submit_wepay':'primary'}) }}
 
